# Email_Management_Agents

./: README.md
backend/: main.py  pyproject.toml
backend/attachments/: Journals Login Details.docx
