[tool.poetry]
name = "email"
version = "0.1.0"
description = ""
authors = ["masfana016 <masfanasrullahansari123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.11"
langchain = "^0.3.20"
langchain-core = "^0.3.41"
langchain-community = "^0.3.19"
langchain-google-genai = "^2.0.11"
langgraph = "^0.3.5"
pydentic = "^0.0.1.dev3"
uvicorn = "^0.34.0"
python-dotenv = "^1.0.1"
langgraph-checkpoint-postgres = "^2.0.15"
psycopg = {extras = ["binary"], version = "^3.2.5"}
psycopg-pool = "^3.2.6"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
